--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "express": "^4.18.1",
+    "pg": "^8.7.3",
+    "pg-promise": "^10.11.1",
+    "postgres": "^3.1.0",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "webpack-dev-middleware": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
